# urbit-chatbot-framework

./: .gitignore  Cargo.toml  README.md
examples/anti-comet-chatbot/: Cargo.toml
examples/anti-comet-chatbot/src/: main.rs
examples/authored-chat-bot/: Cargo.toml
examples/authored-chat-bot/src/: main.rs
examples/authored-chatbot/: Cargo.toml
examples/bible-chatbot/: Cargo.toml
examples/bible-chatbot/src/: main.rs
examples/crypto-prices-chatbot/: Cargo.toml
examples/crypto-prices-chatbot/src/: main.rs
examples/poll-bot/: Cargo.toml
examples/poll-bot/src/: main.rs
examples/simple-chat-bot/: Cargo.toml
examples/simple-chatbot/: Cargo.toml
examples/simple-chatbot/src/: main.rs
src/: lib.rs
